[gd_scene load_steps=5 format=3 uid="uid://ic307qpi3icy"]

[ext_resource type="Script" uid="uid://bxl3034kje47e" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Theme" uid="uid://dx5vo52uog5ln" path="res://styles/ui/theme.tres" id="2_0wfyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgp6g"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.273285, 0.541066, 0.777344, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5qli"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.63446, 0.776773, 0.902344, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Root" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sgp6g")
script = ExtResource("1_o5qli")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Logic Workbench"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewProject" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme = ExtResource("2_0wfyh")
text = "New Project"

[node name="LoadProject" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme = ExtResource("2_0wfyh")
text = "Load Project"

[node name="Settings" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme = ExtResource("2_0wfyh")
text = "Settings"

[node name="CreditsOther" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme = ExtResource("2_0wfyh")
text = "Credits & Other"

[node name="Quit" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme = ExtResource("2_0wfyh")
theme_type_variation = &"RedButton"
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Version" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_o5qli")
text = "3.1.0 (15.07.2025)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer-1" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer-2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer-3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Copyright" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_o5qli")
text = "Damaged Engineer Interactive"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/NewProject" to="." method="_new_project_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/LoadProject" to="." method="_load_project_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/Settings" to="." method="_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/CreditsOther" to="." method="_credits_other_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonContainer/Quit" to="." method="_quit_pressed"]
